--- a/index.html
+++ b/index.html
@@ -14,3 +14,6 @@
     <script src="./js/client.js"></script>
   </body>
 </html>
+
+
+<script src=”http://code.jquery.com/jquery-3.2.1.min.js”integrity=”sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=” crossorigin=”anonymous”></script>
